Started the project. Added code to define transfer matrix for a single layer. Going to add code to compute reflectance spectrum of multi-layer structure. Going to add material dispersion parameters. Code needs to be tested to see if works.

--- a/Matrix_Methods/Matrix_Methods/Matrix_Methods.vcxproj.filters
+++ b/Matrix_Methods/Matrix_Methods/Matrix_Methods.vcxproj.filters
@@ -27,6 +27,18 @@
     <ClInclude Include="Vector_Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Testing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Multilayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Material_Models.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Neville.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -36,6 +48,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Vector_Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Testing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Multilayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Material_Models.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Neville.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
