--- a/Matrix_Methods/Matrix_Methods/Matrix_Methods.vcxproj
+++ b/Matrix_Methods/Matrix_Methods/Matrix_Methods.vcxproj
@@ -116,12 +116,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Attach.h" />
+    <ClInclude Include="Material_Models.h" />
+    <ClInclude Include="Multilayer.h" />
+    <ClInclude Include="Neville.h" />
     <ClInclude Include="Templates.h" />
+    <ClInclude Include="Testing.h" />
     <ClInclude Include="Useful.h" />
     <ClInclude Include="Vector_Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Material_Models.cpp" />
+    <ClCompile Include="Multilayer.cpp" />
+    <ClCompile Include="Neville.cpp" />
+    <ClCompile Include="Testing.cpp" />
     <ClCompile Include="Useful.cpp" />
     <ClCompile Include="Vector_Utils.cpp" />
   </ItemGroup>
