Started coding the general 2*2 matrix method. Changed the names of some of the files for the method that was in Fowles. Need to if I can get the general method to compute the reflectivity of a grating structure.

--- a/Matrix_Methods/Matrix_Methods/Matrix_Methods.vcxproj
+++ b/Matrix_Methods/Matrix_Methods/Matrix_Methods.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Attach.h" />
+    <ClInclude Include="Fowles_Multilayer.h" />
     <ClInclude Include="Material_Models.h" />
     <ClInclude Include="Multilayer.h" />
     <ClInclude Include="Neville.h" />
@@ -125,6 +126,7 @@
     <ClInclude Include="Vector_Utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Fowles_Multilayer.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Material_Models.cpp" />
     <ClCompile Include="Multilayer.cpp" />
