--- a/Matrix_Methods/Matrix_Methods/Matrix_Methods.vcxproj.filters
+++ b/Matrix_Methods/Matrix_Methods/Matrix_Methods.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Neville.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Fowles_Multilayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Neville.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Fowles_Multilayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
